Update otter fun fact.html

--- a/otter fun fact.html
+++ b/otter fun fact.html
@@ -152,9 +152,9 @@
           <section class="panel">
             <div class="top">
               <div class="funfact">
-                <h1 id="headline">Quick fun fact 🦦</h1>
+                <h1 id="headline">Quick Fun Fact! 🦦</h1>
                 <div class="quote">
-                  did you know, otters are sentimental animals and often times have a favorite rock
+                  did you know, otters are sentimental animals and often times have a favorite rock!
                 </div>
               </div>
 
